--- a/views/waiter.handlebars
+++ b/views/waiter.handlebars
@@ -1,6 +1,6 @@
 <div class='header'>
   <h1 id="Welcome">Welcome</h1>
-  <a href="/waiters/add"><b>back Home</b></a>
+  <a href="waiters/add"><b>back Home</b></a>
 
 </div>
 <br>
@@ -92,8 +92,9 @@
     </tr>
   </table>
 </div>
-<br><br>
-<br>
 <div class='footer'>
-
+  <form class="reset" action="/days/resetWaiters" method="post">
+    <button class='button'>
+      <span>Reset</span></button>
+    </form>
 </div>
